busy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: alpine:latest
        resources:
          limits:
            cpu: 0.5
            memory: 128Mi
          requests:
            cpu: 0.25
            memory: 128Mi
        command:
        - sh
        - -c
        - |
          apk add busybox-extras && sleep infinity
